--- a/package.json
+++ b/package.json
@@ -17,6 +17,27 @@
     "start": "cds-serve",
     "watch-incidents2502": "cds watch --open incidents2502/webapp/index.html?sap-ui-xx-viewCache=false"
   },
+  "cds": {
+    "requires": {
+      "[development]": {
+        "auth": {
+          "kind": "mocked",
+          "users": {
+            "incident.support@tester.sap.com": {
+              "password": "initial",
+              "roles": ["support"]
+            },
+            "alice": {
+              "roles": ["support"]
+            },
+            "bob": {
+              "roles": ["support"]
+            }
+          }
+        }
+      }
+    }
+  },
   "sapux": [
     "app/incidents2502"
   ]
