--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "^8",
-    "express": "^4",
     "@cap-js/hana": "^1",
-    "@sap/xssec": "^4"
+    "@sap/ams": "^2",
+    "@sap/cds": "^8",
+    "@sap/xssec": "^4",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
     "@cap-js/sqlite": "^1",
+    "@sap/ams-dev": "^2",
     "@sap/cds-dk": "^8",
     "axios": "^1.7.9",
     "chai": "^4.5.0",
@@ -59,7 +61,10 @@
       },
       "html5-repo": true,
       "destinations": true,
-      "workzone": true
+      "workzone": true,
+      "auth": {
+        "kind": "ias"
+      }
     },
     "sql": {
       "native_hana_associations": false
